# Deva_Light

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.tauri/: deva-light.key.pub
docs/: ACTIONABLE_WAITING_PROVIDER_BOUNDARY.md  BUILDING.md  GITHUB_PUSH.md  OPEN_SOURCE_IDEAS_2026-06.md  UBUNTU_HOOK_ONLY.md  UPDATER.md  WSL_DEPS.md
scripts/: generate_icon.py  install-ubuntu-hook.sh
src/: app.js  drawer.css  drawer.js  index.html  news.css  news.html  news.js  settings.css  settings.html  settings.js  styles.css
src-hook/: Cargo.toml
src-hook/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_event.rs  aggregator.rs  app_lock.rs  cache_cleanup.rs  claude_watcher.rs  codex_paths.rs  codex_watcher.rs  config.rs  cursor_watcher.rs  error_detection.rs  hook_installer.rs  http_server.rs  ipc.rs  lib.rs  logging.rs  main.rs  monitor_origin.rs  monitoring.rs  news.rs  pending_action.rs  project.rs  remote.rs  session_refresh.rs  ssh_remote.rs  ssh_setup.rs  types.rs  updater.rs  window_behavior.rs  wsl_paths.rs
src-tauri/src/providers/: claude.rs  codex.rs  cursor.rs  mod.rs
src-tauri/tests/: aggregator_test.rs  config_test.rs  hook_installer_test.rs  http_server_test.rs  integration_test.rs  project_test.rs  remote_test.rs  types_test.rs
