[package]
name = "deva-light"
version = "0.1.6"
edition = "2021"

[lib]
name = "deva_light"
path = "src/lib.rs"

[[bin]]
name = "deva-light"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"

[dev-dependencies]
filetime = "0.2"
