[package]
name = "deva-light"
version = "0.1.14"
edition = "2021"

[lib]
name = "deva_light"
path = "src/lib.rs"

[[bin]]
name = "deva-light"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
icns = { version = "0.3", features = ["pngio"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"
parking_lot = "0.12"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
filetime = "0.2"
