[package]
name = "deva-light"
version = "0.1.35"
edition = "2021"

[lib]
name = "deva_light"
path = "src/lib.rs"

[[bin]]
name = "deva-light"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
icns = { version = "0.3", features = ["pngio"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"
parking_lot = "0.12"
tauri-plugin-updater = "2.10.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["time"] }
once_cell = "1"
rfd = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow"] }

[dev-dependencies]
filetime = "0.2"
